{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 282,
  "lineage": "03addc63-7e00-de5f-dda6-5db1ce4d8f0d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893711537471:vpc/vpc-0d6a3966361c3cbeb",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c1b2d27523751a8a",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0f9cd86698d4161d7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6a3966361c3cbeb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b4c76e3b177429ed",
            "owner_id": "893711537471"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ELB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:893711537471:loadbalancer/app/Development-elb/5a20de20ba2c5529",
            "arn_suffix": "app/Development-elb/5a20de20ba2c5529",
            "desync_mitigation_mode": "defensive",
            "dns_name": "Development-elb-758719286.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:893711537471:loadbalancer/app/Development-elb/5a20de20ba2c5529",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Development-elb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-083b9013deedb4bfe"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01af61256c1675219"
              },
              {
                "subnet_id": "subnet-03d560e5bf6e29ad0"
              },
              {
                "subnet_id": "subnet-0a189893f506a481b"
              },
              {
                "subnet_id": "subnet-0dea063f826b31aa6"
              },
              {
                "subnet_id": "subnet-0e9ac6353994f3caa"
              },
              {
                "subnet_id": "subnet-0f4817a7628c136bb"
              }
            ],
            "subnets": [
              "subnet-01af61256c1675219",
              "subnet-03d560e5bf6e29ad0",
              "subnet-0a189893f506a481b",
              "subnet-0dea063f826b31aa6",
              "subnet-0e9ac6353994f3caa",
              "subnet-0f4817a7628c136bb"
            ],
            "vpc_id": "vpc-0d6a3966361c3cbeb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sec-group",
            "data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:893711537471:listener/app/Development-elb/5a20de20ba2c5529/89aa7d182128b674",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:893711537471:listener/app/Development-elb/5a20de20ba2c5529/89aa7d182128b674",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:893711537471:loadbalancer/app/Development-elb/5a20de20ba2c5529",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ELB",
            "aws_security_group.alb-sec-group",
            "data.aws_subnet_ids.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:893711537471:targetgroup/Development-asg-target/aad2d2906d62891b",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:893711537471:listener-rule/app/Development-elb/5a20de20ba2c5529/89aa7d182128b674/930399b2a7a5e13f",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:893711537471:listener-rule/app/Development-elb/5a20de20ba2c5529/89aa7d182128b674/930399b2a7a5e13f",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:893711537471:listener/app/Development-elb/5a20de20ba2c5529/89aa7d182128b674",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ELB",
            "aws_lb_listener.http",
            "aws_lb_target_group.asg",
            "aws_security_group.alb-sec-group",
            "data.aws_subnet_ids.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:893711537471:targetgroup/Development-asg-target/aad2d2906d62891b",
            "arn_suffix": "targetgroup/Development-asg-target/aad2d2906d62891b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:893711537471:targetgroup/Development-asg-target/aad2d2906d62891b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Development-asg-target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d6a3966361c3cbeb"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sec-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893711537471:security-group/sg-083b9013deedb4bfe",
            "description": "Security Group for the ELB (ALB)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083b9013deedb4bfe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Development",
            "name_prefix": "",
            "owner_id": "893711537471",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6a3966361c3cbeb"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:893711537471:security-group/sg-0da294e4cf71fe684",
            "description": "Security Group for the ASG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da294e4cf71fe684",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-083b9013deedb4bfe"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Development-asg",
            "name_prefix": "",
            "owner_id": "893711537471",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "name"
            },
            "tags_all": {
              "name": "name"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6a3966361c3cbeb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sec-group"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}